<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.andexert.library.RippleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ripple:rv_type="doubleRipple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#000000"
        android:minHeight="?attr/actionBarSize"
        >

        <TextView
            android:textColor="@drawable/text_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancle"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:onClick="Back"
            android:clickable="true"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/I_want_ask_question"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center"/>


        <TextView
            android:textColor="@drawable/text_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textSize="18sp"
            android:layout_marginRight="30dp"
            android:onClick="Upload"
            android:clickable="true"
            />

    </LinearLayout>
    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ripple:rv_type="doubleRipple">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#000000">

        <!-- tab1 -->

        <TextView
            android:textColor="@drawable/text_selector"
            android:id="@+id/tv_table_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qusetion" />

        <!-- tab2 -->

        <TextView
            android:textColor="@drawable/text_selector"
            android:id="@+id/tv_table_describe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/describe" />
        <!-- tab3 -->
    </LinearLayout>
    </com.andexert.library.RippleView>

    <ImageView
        android:id="@+id/iv_cursor"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dip"
        android:src="@mipmap/cursor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_activity_studentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入你的学号"
            android:digits="1234567890"
            android:maxLength="8"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />



    </LinearLayout>

</LinearLayout>
